# src/main/java/com/gtelict/phuong_tien_api/entity/BienBanBanGiao.java
@@ -20,5 +20,7 @@ public class BienBanBanGiao {
     private String idBenGiao;
     
     private String nguoiKyId;
+    private String nguoiLapId;
+    private String trangThai; // "NHAP", "DA_KY"
     private String fileDinhKem;
 }
